# lib/db/src/schema/index.ts
@@ -17,4 +17,5 @@
 //   export type InsertPost = z.infer<typeof insertPostSchema>;
 //   export type Post = typeof postsTable.$inferSelect;
 
-export * from "./bookings";
+export * from "./bookings";export * from './conversations';
+export * from './messages';
